<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.weatherappassignment.ui.viewModel.WeatherViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/weather_app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/weather_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayoutCollapsedTextStyle"
                app:contentScrim="@color/gradient_blue"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{vm.weatherData.data.cityName}"
                app:titleEnabled="true"
                app:toolbarId="@+id/weather_toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/weather_rounded_bg"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.6"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/location_label"
                        style="@style/BaseText.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_big"
                        android:gravity="center_vertical"
                        android:text="@{vm.weatherData.data.cityName}"
                        app:drawableStartCompat="@drawable/ic_location_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/current_weather_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:contentDescription="@string/weather_image"
                        app:imageResource="@{vm.weatherData.data.weatherStatusImage}"
                        app:layout_constraintBottom_toTopOf="@id/max_temperature_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_max="@dimen/weather_icon_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/location_label"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintWidth_max="@dimen/weather_icon_size" />

                    <TextView
                        android:id="@+id/max_temperature_value"
                        style="@style/BaseText.BigWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.weatherData.data.maxWeatherTemperature}"
                        app:layout_constraintBottom_toTopOf="@id/weather_status"
                        app:layout_constraintEnd_toStartOf="@id/max_temperature_value_indicator"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/current_weather_image"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="--" />

                    <TextView
                        android:id="@+id/max_temperature_value_indicator"
                        style="@style/BaseText.BigWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_very_small"
                        android:text="@string/weather_amount_circle"
                        android:textSize="@dimen/weather_icon_circle_size"
                        app:layout_constraintEnd_toStartOf="@id/min_temperature_value"
                        app:layout_constraintStart_toEndOf="@id/max_temperature_value"
                        app:layout_constraintTop_toTopOf="@id/max_temperature_value" />

                    <TextView
                        android:id="@+id/min_temperature_value"
                        style="@style/BaseText.BigWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.weatherData.data.minWeatherTemperature}"
                        android:textColor="@color/white_transparent"
                        android:textSize="@dimen/small_title_text_size"
                        app:layout_constraintBottom_toTopOf="@id/weather_status"
                        app:layout_constraintEnd_toStartOf="@id/min_temperature_value_indicator"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/max_temperature_value_indicator"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="--" />

                    <TextView
                        android:id="@+id/min_temperature_value_indicator"
                        style="@style/BaseText.BigWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_very_small"
                        android:text="@string/weather_amount_circle"
                        android:textColor="@color/white_transparent"
                        android:textSize="@dimen/weather_icon_circle_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/min_temperature_value"
                        app:layout_constraintTop_toTopOf="@id/min_temperature_value" />

                    <TextView
                        android:id="@+id/weather_status"
                        style="@style/BaseText.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.weatherData.data.weatherStatus}"
                        app:layout_constraintBottom_toTopOf="@id/date_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/max_temperature_value"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/date_label"
                        style="@style/BaseText.Subtitle.TransparentWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/weather_day_margin"
                        android:text="@{vm.weatherData.data.date}"
                        app:layout_constraintBottom_toTopOf="@id/guideline_divider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/weather_status"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <View
                        android:id="@+id/view_separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="50dp"
                        android:background="@color/separator"
                        app:layout_constraintBottom_toTopOf="@id/guideline_divider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_divider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent=".80" />

                    <TextView
                        android:id="@+id/wind_label"
                        style="@style/BaseText.Subtitle.TransparentWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/weather_wind_label"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/humidity_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/wind_value"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/humidity_label"
                        style="@style/BaseText.Subtitle.TransparentWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/weather_humidity_label"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/humidity_value"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/chance_of_rain_label"
                        style="@style/BaseText.Subtitle.TransparentWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/weather_chance_of_rain_label"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/humidity_label"
                        app:layout_constraintTop_toBottomOf="@id/chance_of_rain_value"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/wind_value"
                        style="@style/BaseText.Subtitle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/wind_speed, vm.weatherData.data.weatherSpeed)}"
                        app:layout_constraintBottom_toTopOf="@id/wind_label"
                        app:layout_constraintEnd_toEndOf="@id/wind_label"
                        app:layout_constraintStart_toStartOf="@id/wind_label"
                        app:layout_constraintTop_toBottomOf="@id/guideline_divider"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="--" />

                    <TextView
                        android:id="@+id/humidity_value"
                        style="@style/BaseText.Subtitle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/percentage_format, vm.weatherData.data.weatherHumidity)}"
                        app:layout_constraintBottom_toTopOf="@id/humidity_label"
                        app:layout_constraintEnd_toEndOf="@id/humidity_label"
                        app:layout_constraintStart_toStartOf="@id/humidity_label"
                        app:layout_constraintTop_toBottomOf="@id/guideline_divider"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="--" />

                    <TextView
                        android:id="@+id/chance_of_rain_value"
                        style="@style/BaseText.Subtitle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/percentage_format, vm.weatherData.data.rainProbability)}"
                        app:layout_constraintBottom_toTopOf="@id/chance_of_rain_label"
                        app:layout_constraintEnd_toEndOf="@id/chance_of_rain_label"
                        app:layout_constraintStart_toStartOf="@id/chance_of_rain_label"
                        app:layout_constraintTop_toBottomOf="@id/guideline_divider"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="--" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/weather_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:titleTextColor="@color/white" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/BaseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/weather_forecast_label"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecast_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:recyclerData="@{vm.weatherForecastList.data}"
                    tools:itemCount="16"
                    tools:listitem="@layout/item_weather" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>